Fix visual glitch where buttons for execute, edit and delete workflow did not fit on screen

--- a/app/widgets/workflow/workflow.less
+++ b/app/widgets/workflow/workflow.less
@@ -4,4 +4,7 @@
 // Author: Andy Tang
 // Fork me on Github: https://github.com/EnoF/con-rest
 .workflow {
+  .side-buttons {
+    margin-left: auto;
+  }
 }
